# conda_envfile

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
conda_envfile/: __init__.py
conda_merge_envfile/: __init__.py
docs/: conf.py  index.rst  install.rst  module.rst  tools.rst
tests/: condaforge.yaml  condaforge_multioutput.yaml  test_basic.py  test_condaforge.py  test_packagespecifier.py  test_pyproject.py  test_range.py  test_tools.py  test_unique.py
