[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["click", "Jinja2", "packaging", "prettytable", "pyyaml"]
description = "Inspect/combine conda YAML environment files"
dynamic = ["version"]
name = "conda_envfile"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
conda_envfile_diff = "conda_envfile:conda_envfile_diff"
conda_envfile_merge = "conda_envfile:conda_envfile_merge"
conda_envfile_parse = "conda_envfile:conda_envfile_parse"
conda_envfile_pyproject = "conda_envfile:conda_envfile_pyproject"
conda_envfile_restrict = "conda_envfile:conda_envfile_restrict"

[project.urls]
Source = "https://github.com/tdegeus/conda_envfile"

[tool.setuptools_scm]
write_to = "conda_envfile/_version.py"
